# evoscape

./: .gitignore  LICENSE  README.md  pyproject.toml
alfyn/: loop_celldiff_dataset.py  loop_celldiff_dataset_stage2.py
examples/: Ch2-5_FGF0-3.txt  Ch2-5_FGF0-4.txt  Ch2-5_FGF0-5.txt  example_basics.ipynb  example_celldiff_dataset.ipynb  example_segmentation.ipynb
interactive/: evoscape_demo.py  interactive.py  interactive2.py
notebooks/: basins_analysis.ipynb  constructed_limit_cycle_bifurcations.ipynb  decision_structure_analysis.ipynb  example_limit_cycle_bifurcations.ipynb  example_unstable_cycle.ipynb  figure_3.ipynb  landscape_illustrations.ipynb  movies.ipynb  normal_forms_bifurcations.ipynb  parameter_distributions.ipynb  topography_map.ipynb
scripts/: loop_somites.py
src/evoscape/: __init__.py  helper_functions.py  landscape_visuals.py  module_helper_functions.py  morphogen_regimes.py
src/evoscape/landscapes/: __init__.py  landscape_class.py  landscape_dataset_fitness.py  landscape_segmentation.py
src/evoscape/modules/: __init__.py
src/landscapes/: __init__.py  auxiliary_functions.py  example_basics.ipynb  example_landscape.ipynb  helper_functions.py  landscape_celldiff.py  landscape_class.py  landscape_dataset_fitness.py  landscape_segmentation.py  landscape_visuals.py  module_class.py  module_helper_functions.py  morphogen_regimes.py  population_class.py  testing_ saving.ipynb
src/landscapes/landscapes/: landscape_class.py  landscape_dataset_fitness.py
src/landscapes/modules/: __init__.py  module_class.py
