[tool.poetry]
name = "evoscape"
version = "0.1.0.dev0"
description = ""
authors = ["victoria-mochulska <viktoriia.mochulska@mail.mcgill.ca>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scikit-image = "^0.23.2"
cmcrameri = "^1.9"
pyyaml = "^6.0.1"
seaborn = "^0.13.2"
imageio = "^2.37.0"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
